# Super-Cool-YAML-CV-Generator

./: Cargo.toml  README.md  TODO.md  cv-schema.json
.github/workflows/: static.yml
src/: cli.rs  cv-schema.json  input.rs  lib.rs  main.rs
templates/: template.hbs
