[package]
name = "rust-yaml-cv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clap_complete = "4.5.52"
handlebars = "6.3.2"
jsonschema = "0.30.0"
serde = "1.0.219"
serde_yaml = "0.9.34"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
anyhow = "1.0.98"

[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
